--- a/public/css/pages/index.css
+++ b/public/css/pages/index.css
@@ -50,7 +50,7 @@
 }
 
 #about-img {
-    border-radius: 0 230px 230px 0;
+    border-radius: 0 1000px 1000px 0;
     width: 90%;
     box-shadow: var(--shadow);
 }
@@ -185,9 +185,17 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .blackbox.gutter {
+
+    
+    .blackbox {
         margin: 0;
         width: 50%;
+    }
+
+    .blackbox .gutter {
+        margin: 0;
+        margin-left: auto;
+        max-width: calc(600px - 36px);
     }
 
     #hero {
